# TextualFileIOPlugin

./: .gitignore  CMakeLists.txt  README.md  textualfileio.cpp  textualfileio.hpp  textualfileioplugin.h
